# lpc

doc/: LPC4_vs_LPC3  command_line_options  efun  how_to_add_functions_to_lpc  introduction_to_lpc  script_mode  startup
lib/: README
lib/doc/efun/: acos  add_action  add_simul_efun  add_worth  all_inventory  allocate  array_of_index  asin  atan  break_point  call_function  call_other  call_out  call_out_info  capitalize  catch  cd  ceil  clone_number  clone_object  code_value  command  copy_value  cos  created  crypt  ctime  db_delete  db_flush  db_get  db_indices  db_set  debug_info  decode_value  destruct  disable_commands  dump_heart_beat_data  dump_index_table_data  dump_malloc_data  dump_opt_status  (+148 more)
lib/doc/lfun/: catch_tell  create  exit  heart_beat  id  init  object_enter  query_valid_force  reset
lib/doc/lpc/: optimizer
lib/doc/operators/: and  logical_and  logical_or  or  xor
lib/doc/simul_efuns/: pluralize
lib/doc/types/: array  function  int  list  mapping  object  string
lib/etc/: access_list  info  motd  new_character  welcome
lib/include/: ctype.h  dwim.h  math.h  signal.h  socket.h  stdlib.h  thing.h
lib/include/arpa/: telnet.h
lib/inherit/: ctype.c  find.c  gender.c  interactive.c  item.c  math.c  money.c  msg.c  property.c  reputationbase.c  stdlib.c
lib/room/: church.c  dynamic_inherit  mail.h  mail_reader.c  map  map.c  maproom.c  money.c  post.c  prison.c  pub.c  pub2.c  shop.c  store.c  street.c  tailor.c  vill_green.c  vill_road1.c  vill_road2.c  vill_track.c  yard.c
lib/save/: players
lib/secure/: access_check.c  ip.c  logon.c  master.c  simul_efun.c
lib/std/: dbase.c  living.c  object.c  room.c  room3.c  thing.c
lib/std/living/: bodypart.c  genders.c  human.c  living.c
src/: COPYRIGHT  CREDITS  DONE  Makefile.in  README  TODO  array.c  array.h  array_efuns.c  backend.c  backend.h  batch_efuns.c  bugs  call_out.c  call_out.h  comm.c  comm.h  comm1.h  config.h  configure  configure.in  dbase.c  dbase.h  dbase_efuns.c  dbase_efuns.h  debugmalloc.c  dependencies  dynamic_buffer.c  dynamic_buffer.h  efuns.c  efuns.h  exec.h  fsort.c  func_spec.c  global.h  hash.c  hash.h  instrs.c  instrs.h  interpret.c  (+55 more)
